# format_seismo

./: LICENSE  README.md  format_smartsolo_to_sandi.py  pyproject.toml
format_seismo/: __init__.py  format_seismo.py  solohr.py
mnt/d/formatted_solo_data/year_2025/month_07/day_04/hour_17/: stat_e_250_20250704_1700.mseed  stat_n_250_20250704_1700.mseed  stat_z_250_20250704_1700.mseed
mnt/d/formatted_solo_data/year_2025/month_07/day_04/hour_18/: stat_e_250_20250704_1800.mseed  stat_n_250_20250704_1800.mseed  stat_z_250_20250704_1800.mseed
mnt/d/formatted_solo_data/year_2025/month_07/day_04/hour_19/: stat_e_250_20250704_1900.mseed  stat_n_250_20250704_1900.mseed  stat_z_250_20250704_1900.mseed
mnt/d/formatted_solo_data/year_2025/month_07/day_04/hour_20/: stat_e_250_20250704_2000.mseed  stat_n_250_20250704_2000.mseed  stat_z_250_20250704_2000.mseed
mnt/d/formatted_solo_data/year_2025/month_07/day_04/hour_21/: stat_e_250_20250704_2100.mseed  stat_n_250_20250704_2100.mseed  stat_z_250_20250704_2100.mseed
mnt/d/formatted_solo_data/year_2025/month_07/day_04/hour_22/: stat_e_250_20250704_2200.mseed  stat_n_250_20250704_2200.mseed  stat_z_250_20250704_2200.mseed
mnt/d/formatted_solo_data/year_2025/month_07/day_04/hour_23/: stat_e_250_20250704_2300.mseed  stat_n_250_20250704_2300.mseed  stat_z_250_20250704_2300.mseed
mnt/d/formatted_solo_data/year_2025/month_07/day_05/hour_00/: stat_e_250_20250705_0000.mseed  stat_n_250_20250705_0000.mseed  stat_z_250_20250705_0000.mseed
solohr/: solohr.py
(+102 files in other folders)
